--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,7 +24,7 @@ code,pre {
 }
 code {
 	color: #900;
-	background-color: #111;
+	background-color: #fff;
 	padding: 2px 5px;
 	border-radius: 5px;
 }
