--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
   </header>
 
   <article class="post-content">
+   {% include copyright.html %}
     {{ content }}
   </article>
   
