--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,8 @@ layout: default
   </header>
 
   <article class="post-content">
-   {% include copyright.html %}
+    <!-- 版权声明 -->
+    {% include copyright.html %}
     {{ content }}
   </article>
   
