--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -35,7 +35,7 @@
         }
         
         h1, h2, h3 {
-            border-bottom: 1px solid #CCC;
+            border-bottom: 1px dashed rgb(222, 222, 222);
         }
         
         pre {
