--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -36,6 +36,7 @@
         
         h1, h2, h3 {
             border-bottom: 1px dashed rgb(222, 222, 222);
+            font-weight:bold;
         }
         
         pre {
