--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
   <link rel="icon" href="favicon.ico" />
   
    {% include google-analytics.html %}
+   {% include baidu-analysis.html %}
 </head>
