--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,15 +13,8 @@
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="icon" href="favicon.ico" />
   
-<script>
-  var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?f56279d43c733d547ea06f75f8e05d89";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-</script>
+  {% include baidu-analytics.html %}
+  {% include google-analytics.html %}
 
   
 </head>
