--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,5 +16,6 @@
   {% include baidu-analytics.html %}
   {% include google-analytics.html%}
 
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   
 </head>
