--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,10 @@
 <footer class="footer">
 <div class="wrapper">
 &copy; {{ site.time | date: '%Y' }} {{ site.author }}
-</div>
-    
-<span id="busuanzi_container_site_pv">
-    本站总访问量<span id="busuanzi_value_site_pv"></span>次
+<span id="busuanzi_container_site_uv">
+    | 访客<span id="busuanzi_value_site_uv"></span>人次
 </span>
+</div>
 </footer>
 
 
