--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
 &copy; {{ site.time | date: '%Y' }} {{ site.author }}
 <span id="busuanzi_container_site_uv">
-    | 访客<span id="busuanzi_value_site_uv"></span>人次
+    | 访客：<span id="busuanzi_value_site_uv"></span>
 </span>
 </div>
 </footer>
