--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta"> 发布时间：{{ page.date | date:  "%Y/%m/%-d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
+    <p class="post-meta"> 发布于 {{ page.date | date:  "%Y/%m/%-d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
         <span id="busuanzi_container_page_pv">
-            | 阅读量：<span id="busuanzi_value_page_pv"></span>
+            | 阅读次数：<span id="busuanzi_value_page_pv"></span>
         </span>
     </p>
   </header>
