--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,36 +1,18 @@
 {% if page.nocomments %}
 {% else %}
-{% if site.disqus_shortname %}
-<div class="post-comments">
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-      var disqus_shortname = '{{ site.disqus_shortname }}'; // required: replace example with your forum shortname
-      (function() {
-          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-  </script>
-</div>
-{% endif %}
-{% if site.duoshuo_shortname %}
-<div class="post-comments">
-    <!-- 多说评论框 start -->
-    <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"></div>
-    <!-- 多说评论框 end -->
-    <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-    <script type="text/javascript">
-    var duoshuoQuery = {short_name:"{{ site.duoshuo_shortname }}"};
-      (function() {
-      	var ds = document.createElement('script');
-      	ds.type = 'text/javascript';ds.async = true;
-      	ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-      	ds.charset = 'UTF-8';
-      	(document.getElementsByTagName('head')[0] 
-      	 || document.getElementsByTagName('body')[0]).appendChild(ds);
-      })();
-      </script>
-    <!-- 多说公共JS代码 end -->
-</div>
-{% endif %}
+<div id="container"></div>
+<link rel="stylesheet" href="https://billts.site/extra_css/gitment.css">
+<script src="https://billts.site/js/gitment.js"></script>
+<script>
+var gitment = new Gitment({
+  id: '<%= page.date %>', // 可选。默认为 location.href
+  owner: 'LonlyPan',
+  repo: 'LonlyPan.github.io',
+  oauth: {
+    client_id: 'fcab210fc0e662f105df',
+    client_secret: 'eccbe43937a375a840deee5bc1c245b5bcae3bd9',
+  },
+})
+gitment.render('container')
+</script>
 {% endif %}
