--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -3,7 +3,7 @@
 <script src="https://billts.site/js/gitment.js"></script>
 <script>
 var gitment = new Gitment({
-  id: '<%= page.date %>', // 可选。默认为 location.href
+  id: '{{ page.date }}', // 可选。默认为 location.href
   owner: 'LonlyPan',
   repo: 'LonlyPan.github.io',
   oauth: {
