--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -256,3 +256,67 @@ $hide-sidebar-screen-width: 1120px;
 		padding: 10px;
 	}
 }
+
+.hexo-douban-item {
+    padding-bottom: 10px;
+    position: relative;
+    clear: both;
+    min-height: 170px;
+    padding: 10px 0;
+    border-bottom: 1px #ddd solid;
+}
+
+@media screen and (max-width: 600px) {
+    .hexo-douban-item {
+        width: 100%;
+    }
+}
+
+.hexo-douban-picture {
+    position: absolute;
+    left: 0;
+    top: 10px;
+    width: 100px;
+}
+
+.hexo-douban-info {
+    padding-left: 120px;
+}
+
+.hexo-douban-meta {
+    font-size: 12px;
+    padding-right: 10px;
+}
+
+.hexo-douban-comments {
+    font-size: 12px;
+}
+
+
+.book_page-content {
+    padding: 30px 0;
+
+    .wrapper {                    // 文章显示框
+        position: relative;
+        background: #FAFAFA;
+        box-shadow: 0 1px 4px #999;
+        outline: 1px solid #CCC;
+        &:after {
+            clear:both;
+            content: '';
+            display:block;
+        }
+        &:before {
+            content: '';
+            display:block;
+            position: absolute;
+            height: 100%;
+            right: 0;
+            top: 0;
+            background: #EEE;
+        }
+    }
+    img {
+		max-width:100%;
+	}
+}
