--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -296,7 +296,7 @@ $hide-sidebar-screen-width: 1120px;
 
 
 .book_page-content {
-    padding: 10px 0;
+    padding: 0 0;
 
     .wrapper {                    // 文章显示框
         position: relative;
