--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -75,6 +75,16 @@
 		padding: 10px;
     }
 }
+
+.book-post-list {
+    margin: 0;
+	padding: 5px 20px;
+    list-style: none;
+
+    @include media-query($on-palm) {
+		padding: 10px;
+    }
+}
 .pagination {
 	text-align:center;
 	text-decoration:none;
